Updates for java 11